Changed the buttons background and added the defined functionality with the bold | WARNING: The bottom buttons are still squashed, this bug needds to be resolved before final release

--- a/styles/style.css
+++ b/styles/style.css
@@ -108,3 +108,8 @@ button {
 .percent:active {
     background-color: rgb(123, 189, 255);
 }
+
+.extended-operator {
+    background-color: rgb(46, 160, 118);
+    font-weight: bold;
+}
